--- a/site/config.yaml
+++ b/site/config.yaml
@@ -19,7 +19,7 @@ params:
   description: Practical use of Patterns and Principles for Software Craftsmanship.
   homeMetaContent: Practical use of Patterns and Principles for Software Craftsmanship.
   footer: |
-    Copyright ‎©2019 TheCraftsmen.Pub<br/>
+    Copyright ‎&#xA9;2019 TheCraftsmen.Pub<br/>
     This site is auto-generated from [GitHub Source](https://github.com/thecraftsmenpub/thecraftsmenpub-website) using [Hugo](https://gohugo.io/) with [Cupper](https://github.com/zwbetz-gh/cupper-hugo-theme) theme.
   # For more date formats see https://gohugo.io/functions/format/
   dateFormat: Jan 2, 2006
@@ -39,6 +39,6 @@ menu:
     - name: Tags
       url: /tags/
       weight: 4
-    - name: Rss
+    - name: Feed
       url: /index.xml
       weight: 5
